# streamdeck

./: README.md  add_app.py  mcp_server.py  pyproject.toml  requirements.txt  run.py  settings.yaml
.claude/skills/streamdock/: SKILL.md
hub/: actions.py  config.py  main.py  render.py  voice.py
hub/device/: __init__.py  mirabox.py  simulator.py
hub/platform_io/: __init__.py
profiles/: browser.yaml  claude.yaml  codex.yaml  cursor.yaml  slack.yaml
tools/: gen_symbol_icons.py  knob_probe.py
