[project]
name = "streamdock-hub"
version = "0.1.0"
description = "App switcher and contextual control surface for Mirabox N3-family stream docks"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "pillow",
    "pynput",
    "sounddevice",
    "numpy",
    "faster-whisper",
    "psutil; platform_system == 'Windows'",
    "mcp>=1.0",
    # Mirabox device SDK. Cloned next to this repo:
    #   git clone https://github.com/MiraboxSpace/StreamDock-Device-SDK
    # Installed editable so the SDK's bundled native transport dylib/.so
    # (which lives beside its Python sources) stays reachable.
    "streamdock",
]

[tool.uv]
package = false

[tool.uv.sources]
streamdock = { path = "../StreamDock-Device-SDK/Python-SDK", editable = true }
